<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Block Builder Classic</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>

	<string name="help">Help</string>
	<string name="preferences">Settings</string>


	<string name="back">Back</string>
	<string name="cancel">Cancel</string>

	<string name="newnew">New</string>
	<string name="delete">Delete</string>
	<string name="undo">Undo</string>

	<string name="twice_to_exit">Press 	again to exit</string>
	<string name="flip">Flip piece</string>
	<string name="i_pass">I pass my turn</string>

	<string name="quit">Quit the game?</string>
	<string name="social">Social</string>
	
		
	<string name="new_game">New Game</string>
	<string name="red_ko">Red has no more moves</string>
	<string name="congratulations">Congratulations, you win with score : </string>
	<string name="try_next">Try next level.</string>
	<string name="wins_with_score">wins with score</string>
	
	<string name="Red">Player Red</string>
	<string name="Green">Player Green</string>
	<string name="Blue">Player Blue</string>
	<string name="Orange">Player Orange</string>


    <!-- rate form -->
	<string name="if_you_enjoy">If you enjoy the game Block Builder Classic, shall you take a moment to rate the app?</string>
	<string name="now">OK</string>
	<string name="later">Later</string>
	<string name="never">No</string>


	<!-- preferences -->
	<string name="displaySeeds_title">Seeds display</string>
	<string name="displaySeeds_description">Display a dot where you may place a piece</string>

	<string name="ai_title">Artificial Intelligence</string>
	<string name="ai_description">Computer plays Green, Blue and Yellow</string>

	<string name="aiLevel_title">Level</string>
	<string name="aiLevel_dialog">Select level</string>


	<!-- help -->
	<string name="video_description_1">Click above to watch demo on YouTube</string>
	<string name="video_description_2">You can enlarge video rotating phone in landscape mode</string>

	<string name="rules_title">Rules of the game Block Builder Classic</string>
	<string name="rules_text_1">
		- A board with 20 * 20 squares.
		\n- 4 players having each 21 pieces : 1 single-square, 1 domino, 2 triominos, 5 tetraminos and 12 pentaminos
		\n- As player, I shall place on the board most of my pieces.
		\n- For first round, I must place a piece so that it touches one of the corners of the board.
		\n- Next, a piece must be placed so that it touches a corner of one of my own pieces. It may touch several corners, but never any edge of my pieces!
	</string>
	<string name="rules_text_2">
		- If I cannot place any more piece I pass my turn.
		\n- The end of the game is reached when every player passes.
		\n- My score is : addition of all the squares of the pieces I placed.
	</string>

	<string name="howToPlay_title">How to play with Block Builder Classic Android app</string>
	<string name="howToPlay_text_1">
		Do notice the smooth Drag&amp;Drop and swipe gestures to place the pieces :
		\n- Scroll through your remaining pieces with you finger from left to right.
	</string>
	<string name="howToPlay_text_2">- Select an drag a piece onto the board. You can now drag it around easily putting the finger on the large grey circle</string>
	<string name="howToPlay_text_3">- Rotate the piece using one the handles</string>
	<string name="howToPlay_text_4">
		- You can flip the piece to its mirror position : with a long press on the piece.
		\nFlip a piece can also be done using the menu, specially usefull for tablets.
		\n- You can cancel with the red button. It will replace the piece in your store.
		\n- When the move is valid a green \'ok\' button appears. You can commit the move by clicking it!
	</string>
	<string name="howToPlay_text_5">
		- At any time you can see you oponent remaining pieces : just select tab of corresponding color at the bottom.
		\n- When you win against the machine, you can select a harder level from Settings.
	</string>



</resources>
