<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:padding="2dp"
	>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="10dp"
		>

		<ImageView
		    android:id="@+id/video" 
		    android:src="@drawable/blokish_21_youtube_arrow" 
			android:layout_width="150dp" android:layout_height="200dp"
			android:layout_marginTop="16dp"  
			android:layout_gravity="center_horizontal"
			/>
		<TextView android:text="@string/video_description_1" android:layout_width="fill_parent" android:layout_height="wrap_content"
		    android:gravity="center"
		    android:textStyle="italic|bold"	/>

		<TextView
			android:id="@+id/textView"
			style="@style/h1"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:text="@string/rules_title" />

		<TextView android:text="@string/rules_text_1" android:layout_width="fill_parent" android:layout_height="wrap_content"	/>

		<ImageView android:src="@drawable/blokish_2_pieces" 
			android:layout_margin="10dp"  
			android:layout_gravity="center_horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:scaleType="centerInside"
			/>
		<TextView android:text="@string/rules_text_2" android:layout_width="fill_parent" android:layout_height="wrap_content"	/>


		<TextView android:text="@string/howToPlay_title"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_marginTop="10dp" style="@style/h1" />
		<TextView android:text="@string/howToPlay_text_1" android:layout_width="fill_parent" android:layout_height="wrap_content"	/>
		<ImageView android:src="@drawable/blokish_scroll" 
			android:layout_margin="10dp"  
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:scaleType="centerInside"
			/>
		<TextView android:text="@string/howToPlay_text_2" android:layout_width="fill_parent" android:layout_height="wrap_content"	/>
		<ImageView android:src="@drawable/blokish_dragging" 
			android:layout_margin="10dp"  
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:scaleType="centerInside"
			/>
		<TextView android:text="@string/howToPlay_text_3" android:layout_width="fill_parent" android:layout_height="wrap_content"	/>
		<ImageView android:src="@drawable/blokish_rotating" 
			android:layout_margin="10dp"  
			android:layout_width="match_parent"
			android:layout_height="200dp"
			android:scaleType="centerInside"
			/>
		<TextView android:text="@string/howToPlay_text_4" android:layout_width="fill_parent" android:layout_height="wrap_content"	/>

		<ImageView android:src="@drawable/blokish_21_1" 
			android:layout_margin="10dp"  
			android:layout_width="match_parent"
            android:layout_height="200dp"
			android:scaleType="centerInside"
			/>
		<TextView android:text="@string/howToPlay_text_5" android:layout_width="fill_parent" android:layout_height="wrap_content"	/>


	</LinearLayout>
</ScrollView> 
	